# blaze

./: CMakeLists.txt  Dockerfile  Makefile  README.md
apps/: CMakeLists.txt  bc.cpp  bc_pb.cpp  bfs.cpp  bfs_pb.cpp  boilerplate.cpp  convert.cpp  kcore.cpp  pagerank.cpp  pagerank_pb.cpp  pb.cpp  spmv.cpp  spmv_pb.cpp  spmv_sync.cpp  test1.cpp  wcc.cpp  wcc_pb.cpp
apps/include/: Connectivity.h  PageRank.h  boilerplate.h
cmake/Modules/: FindVTune.cmake
include/: AccumulateWorker.h  Array.h  AsyncIo.h  Barrier.h  Bin.h  BinningWorker.h  Bitmap.h  ComputeEngine.h  ComputeWorker.h  EdgeMap.h  GatherWorker.h  Graph.h  IoEngine.h  IoScheduler.h  IoSync.h  IoWorker.h  MemGraph.h  PBEngine.h  Param.h  Queue.h  RingBuffer.h  Runtime.h  ScatterWorker.h  Set.h  Synchronization.h  Type.h  Util.h  VertexFilter.h  VertexMap.h  Worklist.h  atomics.h  filesystem.h  mem.h  pagealloc.h  profile.h
include/concurrentqueue/: blockingconcurrentqueue.h  concurrentqueue.h
libgalois/: CMakeLists.txt  cpuinfo.txt
libgalois/include/galois/: Array.h  Bag.h  Bin.h  Bitmap.h  File.h  LargeArray.h  LargePmemArray.h  MappedLargeArray.h  Partition.h  PerfCounter.h  Traits.h  UnrolledLinkedList.h  util.h
libgalois/include/galois/graphs/: Details.h  FileGraph.h  LCGraph.h  LC_CSR_Graph.h  Util.h
libgalois/include/galois/runtime/: Executor_DoAll.h  Range.h
libgalois/include/galois/substrate/: Init.h  NumaMem.h  PageAlloc.h  ThreadPool.h
libgalois/src/: FileGraph.cpp  NumaMem.cpp  PageAlloc.cpp  PerfCounter.cpp  SubsInit.cpp  ThreadPool.cpp
scripts/: figure7.csv  figure8_a.csv  figure8_b.csv  figure9_friendster.csv  figure9_rmat27.csv  figure9_rmat30.csv  figure9_sk2005.csv  figure9_twitter.csv  figure9_uran27.csv  generate_datafile.py  parse_trace_file.py  run.py  run_figure7.sh  run_figure8.sh  run_figure9.sh
scripts/configs/: figure7.csv  figure8_b.csv  figure9_friendster.csv  figure9_frienster.csv  figure9_rmat27.csv  figure9_rmat30.csv  figure9_sk2005.csv  figure9_twitter.csv  figure9_uran27.csv
src/: CMakeLists.txt  Runtime.cpp
